--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist",
-    "preview": "vite preview",
-    "check": "tsc"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "4.21.2"
+    "express": "4.21.2",
+    "lucide-react": "0.453.0",
+    "clsx": "2.1.1",
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
     "vite": "7.1.9",
-    "esbuild": "0.25.10"
+    "esbuild": "0.25.10",
+    "typescript": "5.9.3"
   }
 }
