--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "2.1.1",
     "express": "4.21.2",
     "lucide-react": "0.453.0",
-    "clsx": "2.1.1",
     "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
-    "vite": "7.1.9",
+    "@types/node": "^25.2.3",
+    "@vitejs/plugin-react": "^5.1.4",
     "esbuild": "0.25.10",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "vite": "7.1.9"
   }
 }
