--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "titan-joy-vip-pro",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist",
-    "preview": "vite preview"
+    "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist"
   },
   "dependencies": {
-    "clsx": "2.1.1",
     "express": "4.21.2",
-    "lucide-react": "0.453.0",
-    "tailwind-merge": "3.3.1"
+    "react": "19.2.1",
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
-    "@types/node": "^25.2.3",
-    "@vitejs/plugin-react": "^5.1.4",
-    "esbuild": "0.25.10",
-    "typescript": "5.9.3",
-    "vite": "7.1.9"
+    "vite": "7.1.9",
+    "@vitejs/plugin-react": "5.0.4",
+    "esbuild": "0.25.10"
   }
 }
