--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react-dom": "19.2.1"
   },
   "devDependencies": {
-    "vite": "7.1.9",
+    "@types/node": "^25.2.3",
     "@vitejs/plugin-react": "5.0.4",
-    "esbuild": "0.25.10"
+    "esbuild": "0.25.10",
+    "vite": "7.1.9"
   }
 }
