--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "titan-joy-vip-pro",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "scripts": {
     "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist"
@@ -11,9 +11,8 @@
     "react-dom": "19.2.1"
   },
   "devDependencies": {
-    "@types/node": "^25.2.3",
+    "vite": "7.1.9",
     "@vitejs/plugin-react": "5.0.4",
-    "esbuild": "0.25.10",
-    "vite": "7.1.9"
+    "esbuild": "0.25.10"
   }
 }
