--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "titan-joy-vip-pro",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
     "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist"
@@ -9,9 +9,12 @@
     "express": "4.21.2",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "wouter": "3.3.5",
     "lucide-react": "0.453.0",
     "clsx": "2.1.1",
-    "tailwind-merge": "3.3.1"
+    "tailwind-merge": "3.3.1",
+    "framer-motion": "11.11.11",
+    "@tanstack/react-query": "5.59.0"
   },
   "devDependencies": {
     "vite": "7.1.9",
@@ -19,6 +22,9 @@
     "esbuild": "0.25.10",
     "tailwindcss": "3.4.1",
     "autoprefixer": "10.4.17",
-    "postcss": "8.4.35"
+    "postcss": "8.4.35",
+    "@types/node": "22.7.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
