--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "titan-joy-vip-pro",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist"
@@ -14,7 +14,15 @@
     "clsx": "2.1.1",
     "tailwind-merge": "3.3.1",
     "framer-motion": "11.11.11",
-    "@tanstack/react-query": "5.59.0"
+    "@tanstack/react-query": "5.59.0",
+    "class-variance-authority": "0.7.0",
+    "@radix-ui/react-tooltip": "1.1.2",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-toast": "1.2.1",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-separator": "1.1.0"
   },
   "devDependencies": {
     "vite": "7.1.9",
