--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@radix-ui/react-label": "2.1.0",
     "@radix-ui/react-separator": "1.1.0"
   },
-  "devDependencies": {
+ "devDependencies": {
     "vite": "7.1.9",
     "@vitejs/plugin-react": "5.0.4",
     "esbuild": "0.25.10",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "4.0.0",
+    "@tailwindcss/vite": "4.0.0",
     "autoprefixer": "10.4.17",
     "postcss": "8.4.35",
     "@types/node": "22.7.5",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3"
   }
-}
+
