--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "titan-joy-vip-pro",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "type": "module",
   "scripts": {
     "build": "vite build && esbuild server/_core/index.ts --platform=node --bundle --format=esm --outdir=dist"
@@ -22,9 +22,10 @@
     "@radix-ui/react-toast": "1.2.1",
     "@radix-ui/react-dropdown-menu": "2.1.1",
     "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-separator": "1.1.0"
+    "@radix-ui/react-separator": "1.1.0",
+    "sonner": "1.5.0"
   },
- "devDependencies": {
+  "devDependencies": {
     "vite": "7.1.9",
     "@vitejs/plugin-react": "5.0.4",
     "esbuild": "0.25.10",
@@ -36,4 +37,4 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3"
   }
-
+}
